# sharc_theory

./: .gitignore  .gitmodules  .mcp.json  BLOG_SETUP.md  PLOT_REVIEW.md  README.md  bellsinequality.md  blog.sh  hello.py  hugo.toml  minsky.md  minsky2.md  mmt_monetary.md  money_minsky_policy_mismatch_AUDIT.md  money_minsky_policy_mismatch_HANDOFF.md  pyproject.toml
.ai/decisions/: adr-0001.json  adr-0001.md  adr-0002.json  adr-0002.md  adr-0003.json  adr-0003.md  adr-0004.json  adr-0004.md  adr-0005.json  adr-0005.md  adr-0006.json  adr-0006.md  adr-0007.json  adr-0007.md  adr-0009.json  adr-0009.md
.ai/handoffs/: money-minsky-policy-mismatch-factor-refinement.md  money-minsky-policy-mismatch.md
.ai/index/: manifest.json
.ai/specs/: architecture.md  current_spec.md
.ai/state/: snapshot.json
.ai/validation/: latest.json
.claude/: settings.local.json
.github/workflows/: hugo.yaml
archetypes/: default.md
content/posts/: bells_inequality.md  ideas_intelligence_creativity.md  models_define_world.md  money-minsky-policy-mismatch.md  paradox_of_individualism.md  societies-as-complex-systems.md
docs/levinfiles/: README.ipynb  README.md
experiments/: __init__.py
experiments/bells_inequality/: cache.py  config.py  local_hv.py  plotting.py  quantum.py  run_experiment.py
experiments/ideas_intelligence_creativity/: README.md  __init__.py  agents.py  config.py  creativity.py  evolution.py  gridworld.py  intelligence.py  landscape.py  neuroevolution.py  plotting.py  run_experiment_1.py  run_experiment_2.py  strategies.py
experiments/models_define_world/: README.md  __init__.py  abm_core.py  cache.py  config.py  interventions.py  layered_network.py  (+5 more)
results/: experiment_cache.npz  experiment_meta.json  experiment_results.json
static/: CNAME
(+377 files in other folders)
