[project]
name = "sharc-theory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-server-mathjax>=0.2.6",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pathos>=0.3.3",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.1",
]
