[project]
name = "sharc-theory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
    "jupyter-server-mathjax>=0.2.6",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pathos>=0.3.3",
    "networkx>=3.2",
    "scipy>=1.11",
    "numba>=0.58",
    "tqdm>=4.66",
    "ipywidgets>=8.1",
    "pyyaml>=6.0",
    "jupyterlab (>=4.4.10,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.1",
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["models/evolutionary/abiogenesis_blaise/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=models/evolutionary/abiogenesis_blaise/core",
    "--cov=models/evolutionary/abiogenesis_blaise/extensions",
    "--cov=models/evolutionary/abiogenesis_blaise/analysis",
    "--cov-report=html",
    "--cov-report=term",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/notebooks/*",
    "*/experiments/*",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

